# stack2cabal

./: .gitignore  ChangeLog.md  LICENSE  README.txt  stack2cabal.cabal
src/: Main.hs
src/Stack2Cabal/: Cabal.hs  ExtraDeps.hs  Keyed.hs  LocalPkgs.hs  Options.hs  RemotePkgs.hs  Resolver.hs  StackYaml.hs  Util.hs
